--- a/lib/premiere_ecoute_web/live/homepage_live.html.heex
+++ b/lib/premiere_ecoute_web/live/homepage_live.html.heex
@@ -1,5 +1,5 @@
 <Layouts.app flash={@flash} current_scope={assigns[:current_scope] || %{}}>
-  <div class="text-white flex flex-col" style="background-color: var(--color-dark-950); min-height: calc(100vh - 5rem);">
+  <div class="synthwave-bg text-white flex flex-col" style="min-height: calc(100vh - 5rem);">
     <!-- AIDEV-NOTE: Hero section with left/right layout: title+description left, mockups right -->
     <!-- Hero Section -->
     <div class="flex-1 py-12">
